# FlirtCraft

./: .gitignore
.claude/: settings.local.json
.claude/agents/: polisher.md  product-manager.md  reqing-ball.md  system-architect.md  ux-ui-designer.md
FlirtCraft-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README-deployment.md  README-local-setup.md  README.md  alembic.ini  docker-compose.yml  main.complex.py  main.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements-minimal.txt  requirements.complex.txt  requirements.txt  run_migration.py  simple_test.py  test_api.py  test_connection.py  worker.py
FlirtCraft-backend/.github/workflows/: ci-cd-pipeline.yml
FlirtCraft-backend/alembic/: env.py
FlirtCraft-backend/alembic/versions/: 2025_09_06_2334-001_create_onboarding_and_user_models.py  2025_09_07_0100-002_update_onboarding_for_5_screen_flow.py  2025_09_07_1130-003_add_skill_goals_and_birth_date.py
FlirtCraft-backend/app/: __init__.py  database.py  main.py  models.py
FlirtCraft-backend/app/api/: __init__.py  auth.py  auth_supabase.py  onboarding.py  users.py
FlirtCraft-backend/app/config/: onboarding_flow.py
FlirtCraft-backend/app/core/: auth.py  config.py  database.py  redis_client.py  supabase_client.py
FlirtCraft-backend/app/models/: __init__.py  achievement.py  base.py  conversation.py  feedback.py  onboarding.py  user.py
FlirtCraft-backend/app/routers/: __init__.py  analytics.py  auth.py  conversations.py  onboarding.py  scenarios.py
FlirtCraft-backend/app/schemas/: __init__.py  auth.py  base.py  onboarding.py  user.py
FlirtCraft-backend/app/services/: __init__.py  analytics.py  openrouter.py
FlirtCraft-backend/docker/redis/: redis.conf
FlirtCraft-backend/nginx/: nginx.conf
FlirtCraft-frontend/: .env  .env.example  .npmrc  DEVELOPMENT.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
FlirtCraft-frontend/app/: _layout.tsx  index.tsx
FlirtCraft-frontend/app/auth/: _layout.tsx  login.tsx
FlirtCraft-frontend/app/main/: index.tsx
FlirtCraft-frontend/app/onboarding/: _layout.tsx  age-verification.tsx  index.tsx  preferences.tsx  register.tsx  skills.tsx  welcome.tsx
FlirtCraft-frontend/app/signin/: index.tsx
FlirtCraft-frontend/components/: MainAppPlaceholder.tsx
FlirtCraft-frontend/components/animations/: AnimatedContainer.tsx
FlirtCraft-frontend/components/onboarding/: DatePicker.tsx  ErrorNotification.tsx  ErrorNotificationWrapper.tsx  GradientButton.tsx  OnboardingButton.tsx  OnboardingHeader.tsx  OrangeIcon.tsx  PasswordRequirementsChecklist.tsx  WheelDatePicker.tsx
FlirtCraft-frontend/features/onboarding/components/: AgeVerificationScreen.tsx  AuthenticationScreen.tsx  OnboardingFlow.tsx  PreferencesScreen.tsx  SignInScreen.tsx  SkillGoalsScreen.tsx  WelcomeScreen.tsx
FlirtCraft-frontend/features/onboarding/types/: index.ts
FlirtCraft-frontend/lib/: index.ts  supabase.ts  theme.ts
FlirtCraft-frontend/lib/api/: client.ts  index.ts  types.ts
FlirtCraft-frontend/lib/api/services/: conversationService.ts  scenarioService.ts  userService.ts
FlirtCraft-frontend/lib/contexts/: ErrorContext.tsx
FlirtCraft-frontend/lib/hooks/: useConversations.ts  useEntranceAnimation.ts  useNavigationWithErrorDismiss.ts  useScenarios.ts  useUser.ts
FlirtCraft-frontend/lib/providers/: NativeBaseProvider.tsx  ReactQueryProvider.tsx  index.ts
FlirtCraft-frontend/lib/services/: loginRateLimitService.ts  rateLimitService.test.ts  rateLimitService.ts
FlirtCraft-frontend/lib/storage/: secureStorage.ts
FlirtCraft-frontend/lib/utils/: constants.ts  helpers.ts
FlirtCraft-frontend/services/: supabase.ts
FlirtCraft-frontend/services/api/: onboardingApi.ts  onboardingQueries.ts
FlirtCraft-frontend/stores/: onboardingStore.ts
docs/: architecture-output.md  flirtcraft-ai-implementation-guide.md  high-level.txt  premium-architecture-revenuecat.md  product-manager-output.md  text-stack-preferences.md
docs/AI implementation/: ai-strategy-cost-analysis.md  gemini-2.5-flash-lite-recommendation.md  gemini-ai-integration-guide.md
docs/design-documentation/: README.md  user-journey-overall.md
docs/design-documentation/accessibility/: README.md  compliance.md  guidelines.md  testing.md
docs/design-documentation/assets/: design-tokens.json
docs/design-documentation/assets/style-dictionary/: config.json
docs/design-documentation/design-system/: README.md  style-guide.md
docs/design-documentation/design-system/components/: README.md  buttons.md  cards.md  chat-bubbles.md  context-cards.md  forms.md  gamification.md  modals.md  navigation.md  onboarding-components.md  premium-buttons.md
docs/design-documentation/design-system/platform-adaptations/: README.md  android.md  ios.md  web.md
docs/design-documentation/design-system/tokens/: README.md  animations.md  colors.md  nativebase-theme.md  premium-animations.md  spacing.md  typography.md
docs/design-documentation/features/: complete-screen-inventory.md
docs/design-documentation/features/conversation/: README.md  accessibility.md  ai-behavior-requirements.md  implementation.md  interactions.md  screen-states.md  user-journey.md
docs/design-documentation/features/feedback/: README.md  accessibility.md  evaluation-metrics.md  implementation.md  interactions.md  screen-states.md  user-journey.md
docs/design-documentation/features/gamification/: README.md  accessibility.md  implementation.md  interactions.md  screen-states.md  user-journey.md
docs/design-documentation/features/onboarding/: README.md  accessibility.md  implementation-guide.md  implementation.md  interactions.md  premium-redesign.md  screen-states.md  user-journey.md
docs/design-documentation/features/pre-conversation-context/: README.md  accessibility.md  implementation.md  interactions.md  screen-states.md  user-journey.md
docs/design-documentation/features/premium-monetization/: README.md  implementation.md  user-journey.md
docs/design-documentation/features/profile/: README.md  (+5 more)
(+12 files in other folders)
